# rlm_tracer

./: CLAUDE.md  package.json
backend/: .pre-commit-config.yaml  Makefile  config.yaml  pyproject.toml  research.md  spec.md  stack.md  tasks.md
backend/src/pipeline/: config.py  jsonl_repository.py  models.py  repository.py
frontend/: components.json  package.json  tasks.md  visualizer_summary.md
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AsciiGlobe.tsx  CodeBlock.tsx  CodeWithLineNumbers.tsx  Dashboard.tsx  ExecutionPanel.tsx  FileUploader.tsx  IterationTimeline.tsx  LogViewer.tsx  StatsCard.tsx  SyntaxHighlight.tsx  ThemeToggle.tsx  TrajectoryPanel.tsx
frontend/src/components/__tests__/: Dashboard.test.tsx  FileUploader.test.tsx  LogViewer.test.tsx  fixtures.ts
frontend/src/lib/: parse-logs.ts  types.ts
frontend/src/lib/__tests__/: fixture.jsonl  parse-logs.test.ts
model_serving/: README.md  pyproject.toml  run_model.py
